Bug 368711 - Crash when closing document (GDB backtrace)
Summary: Crash when closing document (GDB backtrace)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-12 19:18 UTC by wolthera
Modified: 2016-09-13 07:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2016-09-12 19:18:38 UTC
I closed a document. Krita crashed...

GDB backtrace:


Thread 1 "krita" received signal SIGSEGV, Segmentation fault.
0x00007ffff2a76034 in KoResourcePopupAction::~KoResourcePopupAction (this=0x152883a0, __in_chrg=<optimized out>)
    at /home/krita/kde/src/krita/libs/widgets/KoResourcePopupAction.cpp:120
120	    delete d->imageCollection;
(gdb) thread apply all backtrace

Thread 756 (Thread 0x7fff9c846700 (LWP 8087)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007ffff553d738 in QWaitCondition::wait(QMutex*, unsigned long) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff5539467 in ?? () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#3  0x00007ffff553cc89 in ?? () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#4  0x00007fffeec936fa in start_thread (arg=0x7fff9c846700) at pthread_create.c:333
#5  0x00007ffff4c38b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 12 (Thread 0x7fffa7a2a700 (LWP 7146)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007ffff553d7eb in QWaitCondition::wait(QMutex*, unsigned long) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff6713aa2 in ?? () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Widgets.so.5
#3  0x00007ffff553cc89 in ?? () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#4  0x00007fffeec936fa in start_thread (arg=0x7fffa7a2a700) at pthread_create.c:333
#5  0x00007ffff4c38b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 10 (Thread 0x7fffa8372700 (LWP 7144)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007ffff553d7eb in QWaitCondition::wait(QMutex*, unsigned long) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff5537116 in QSemaphore::tryAcquire(int, int) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#3  0x00007ffff2e485c3 in KisTileDataSwapper::waitForWork (this=<optimized out>) at /home/krita/kde/src/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:86
#4  0x00007ffff2e487ba in KisTileDataSwapper::run (this=0x7ffff32ff760 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>)
    at /home/krita/kde/src/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:92
#5  0x00007ffff553cc89 in ?? () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#6  0x00007fffeec936fa in start_thread (arg=0x7fffa8372700) at pthread_create.c:333
#7  0x00007ffff4c38b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7fffc0ed5700 (LWP 7143)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007ffff553d7eb in QWaitCondition::wait(QMutex*, unsigned long) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#2  0x00007ffff5536e8b in QSemaphore::acquire(int) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#3  0x00007ffff2e2e97e in KisTileDataPooler::waitForWork (this=0x7ffff32ff720 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>)
    at /home/krita/kde/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:165
#4  0x00007ffff2e2f13a in KisTileDataPooler::run (this=0x7ffff32ff720 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>)
    at /home/krita/kde/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:187
#5  0x00007ffff553cc89 in ?? () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#6  0x00007fffeec936fa in start_thread (arg=0x7fffc0ed5700) at pthread_create.c:333
#7  0x00007ffff4c38b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7fffd882a700 (LWP 7137)):
#0  0x00007ffff4c2ce8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fffee36839c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee3684ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ffff574e4e7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#4  0x00007ffff56fcefa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#5  0x00007ffff553838c in QThread::exec() () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#6  0x00007fffeeebecd5 in ?? () from /home/krita/Qt/5.6/gcc_64/lib/libQt5DBus.so.5
#7  0x00007ffff553cc89 in ?? () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#8  0x00007fffeec936fa in start_thread (arg=0x7fffd882a700) at pthread_create.c:333
---Type <return> to continue, or q <return> to quit---
#9  0x00007ffff4c38b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7fffd9245700 (LWP 7136)):
#0  0x00007ffff4c2ce8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fffee36839c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee368722 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fffde6a3916 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007fffee38ebc5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fffeec936fa in start_thread (arg=0x7fffd9245700) at pthread_create.c:333
#6  0x00007ffff4c38b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7fffd9a46700 (LWP 7135)):
#0  0x00007ffff4c2ce8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fffee36839c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee3684ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fffee3684e9 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fffee38ebc5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fffeec936fa in start_thread (arg=0x7fffd9a46700) at pthread_create.c:333
#6  0x00007ffff4c38b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7fffda247700 (LWP 7134)):
#0  0x00007ffff4c2ce8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fffee36839c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee3684ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fffda24f28d in ?? () from /usr/lib/x86_64-linux-gnu/gio/modules/libdconfsettings.so
#4  0x00007fffee38ebc5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fffeec936fa in start_thread (arg=0x7fffda247700) at pthread_create.c:333
#6  0x00007ffff4c38b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fffe4ac0700 (LWP 7133)):
#0  0x00007ffff4c2ce8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007ffff355bc62 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007ffff355d8d7 in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007fffe596fdc9 in ?? () from /home/krita/Qt/5.6/gcc_64/plugins/platforms/../../lib/libQt5XcbQpa.so.5
#4  0x00007ffff553cc89 in ?? () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#5  0x00007fffeec936fa in start_thread (arg=0x7fffe4ac0700) at pthread_create.c:333
#6  0x00007ffff4c38b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7ffff7f0f8c0 (LWP 7129)):
#0  0x00007ffff2a76034 in KoResourcePopupAction::~KoResourcePopupAction (this=0x152883a0, __in_chrg=<optimized out>)
    at /home/krita/kde/src/krita/libs/widgets/KoResourcePopupAction.cpp:120
#1  0x00007ffff2a760b9 in KoResourcePopupAction::~KoResourcePopupAction (this=0x152883a0, __in_chrg=<optimized out>)
    at /home/krita/kde/src/krita/libs/widgets/KoResourcePopupAction.cpp:122
#2  0x00007ffff5728f54 in QObjectPrivate::deleteChildren() () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#3  0x00007ffff6530156 in QWidget::~QWidget() () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Widgets.so.5
#4  0x00007ffff2a61299 in KoColorPopupButton::~KoColorPopupButton (this=0x155f1750, __in_chrg=<optimized out>)
    at /home/krita/kde/src/krita/libs/widgets/KoColorPopupButton.cpp:36
#5  0x00007ffff5728f54 in QObjectPrivate::deleteChildren() () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#6  0x00007ffff6530156 in QWidget::~QWidget() () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Widgets.so.5
#7  0x00007ffff2a77419 in KoFillConfigWidget::~KoFillConfigWidget (this=0x156faee0, __in_chrg=<optimized out>)
---Type <return> to continue, or q <return> to quit---
    at /home/krita/kde/src/krita/libs/widgets/KoFillConfigWidget.cpp:301
#8  0x00007ffff2493921 in qDeleteAll<QList<QPointer<QWidget> >::const_iterator> (end=..., begin=...) at /home/krita/Qt/5.6/gcc_64/include/QtCore/qalgorithms.h:317
#9  qDeleteAll<QList<QPointer<QWidget> > > (c=...) at /home/krita/Qt/5.6/gcc_64/include/QtCore/qalgorithms.h:325
#10 KoToolBase::~KoToolBase (this=0x155690d0, __in_chrg=<optimized out>) at /home/krita/kde/src/krita/libs/flake/KoToolBase.cpp:104
#11 0x00007fffae59be79 in DefaultTool::~DefaultTool (this=0x155690d0, __in_chrg=<optimized out>)
    at /home/krita/kde/src/krita/plugins/tools/defaulttool/defaulttool/DefaultTool.cpp:165
#12 0x00007ffff24ab6e9 in KoToolManager::Private::detachCanvas (this=0xcad8160, controller=controller@entry=0x1574c1e0)
    at /home/krita/kde/src/krita/libs/flake/KoToolManager.cpp:842
#13 0x00007ffff24abb42 in KoToolManager::removeCanvasController (this=<optimized out>, controller=controller@entry=0x1574c1e0)
    at /home/krita/kde/src/krita/libs/flake/KoToolManager.cpp:285
#14 0x00007ffff79272f4 in KisView::~KisView (this=0x158a51a0, __in_chrg=<optimized out>) at /home/krita/kde/src/krita/libs/ui/KisView.cpp:273
#15 0x00007ffff79274b9 in KisView::~KisView (this=0x158a51a0, __in_chrg=<optimized out>) at /home/krita/kde/src/krita/libs/ui/KisView.cpp:275
#16 0x00007ffff5728f54 in QObjectPrivate::deleteChildren() () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#17 0x00007ffff6530156 in QWidget::~QWidget() () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Widgets.so.5
#18 0x00007ffff6660a49 in QMdiSubWindow::~QMdiSubWindow() () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Widgets.so.5
#19 0x00007ffff5729300 in QObject::event(QEvent*) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#20 0x00007ffff65344ab in QWidget::event(QEvent*) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Widgets.so.5
#21 0x00007ffff666124b in QMdiSubWindow::event(QEvent*) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Widgets.so.5
#22 0x00007ffff64f204c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Widgets.so.5
#23 0x00007ffff64f6488 in QApplication::notify(QObject*, QEvent*) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Widgets.so.5
#24 0x00007ffff78cbca7 in KisApplication::notify (this=<optimized out>, receiver=0x14282230, event=0x13910aa0)
    at /home/krita/kde/src/krita/libs/ui/KisApplication.cpp:511
#25 0x00007ffff56fee80 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#26 0x00007ffff5701673 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#27 0x00007ffff574e0f3 in ?? () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#28 0x00007fffee3681a7 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007fffee368400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007fffee3684ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007ffff574e4e7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#32 0x00007ffff56fcefa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#33 0x00007ffff5704d9d in QCoreApplication::exec() () from /home/krita/Qt/5.6/gcc_64/lib/libQt5Core.so.5
#34 0x0000000000404c91 in main (argc=1, argv=<optimized out>) at /home/krita/kde/src/krita/krita/main.cc:231
(gdb) 
(gdb) 


Reproducible: Didn't try
Comment 1 Scott Petrovic 2016-09-13 04:06:48 UTC
same crash and backtrace happens to me with gdb. Was about to file the same bug report. :)
Comment 2 Halla Rempt 2016-09-13 07:17:21 UTC
Git commit 711e21e9d2fc5d4f8ae2c95c3dbaf502e9029bab by Boudewijn Rempt.
Committed on 13/09/2016 at 07:16.
Pushed by rempt into branch 'master'.

Properly initialize all d-pointer variables

M  +6    -7    libs/widgets/KoResourcePopupAction.cpp

http://commits.kde.org/krita/711e21e9d2fc5d4f8ae2c95c3dbaf502e9029bab