Properly initialize all d-pointer variables

BUG:368711