libs/widgets/KoResourcePopupAction.cpp
@@ -45,13 +45,11 @@
 class KoResourcePopupAction::Private
 {
 public:
-    Private() : resourceList(0), background(0), checkerPainter(4)
-    {}
-    QMenu *menu;
-    KoResourceItemView *resourceList;
+    QMenu *menu {0};
+    KoResourceItemView *resourceList {0};
     QSharedPointer<KoShapeBackground> background;
-    KoImageCollection *imageCollection;
-    KoCheckerBoardPainter checkerPainter;
+    KoImageCollection *imageCollection {0};
+    KoCheckerBoardPainter checkerPainter {4};
 };
 
 KoResourcePopupAction::KoResourcePopupAction(QSharedPointer<KoAbstractResourceServerAdapter>resourceAdapter, QObject *parent)
@@ -83,7 +81,8 @@ KoResourcePopupAction::KoResourcePopupAction(QSharedPointer<KoAbstractResourceSe
         QGradient *qg = gradient->toQGradient();
         qg->setCoordinateMode(QGradient::ObjectBoundingMode);
         d->background = QSharedPointer<KoShapeBackground>(new KoGradientBackground(qg));
-    } else if (pattern) {
+    }
+    else if (pattern) {
         d->imageCollection = new KoImageCollection();
         d->background = QSharedPointer<KoShapeBackground>(new KoPatternBackground(d->imageCollection));
         static_cast<KoPatternBackground*>(d->background.data())->setPattern(pattern->pattern());
